adjusting code to create report with query native